--- a/package.json
+++ b/package.json
@@ -52,6 +52,11 @@
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.5",
     "typescript": "5.1.3",
+    "uuid": "^9.0.0",
+    "uuidv4": "^6.2.13",
     "zod": "^3.21.4"
+  },
+  "devDependencies": {
+    "@types/uuid": "^9.0.1"
   }
 }
