--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@reduxjs/toolkit": "^1.9.5",
     "@supabase/auth-helpers-nextjs": "^0.7.2",
     "@supabase/supabase-js": "^2.25.0",
     "@tailwindcss/container-queries": "^0.1.1",
@@ -48,6 +49,9 @@
     "react-day-picker": "^8.7.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.3",
+    "react-redux": "^8.1.0",
+    "redux-persist": "^6.0.0",
+    "resend": "^0.15.3",
     "slugify": "^1.6.6",
     "tailwind-merge": "^1.13.0",
     "tailwindcss": "3.3.2",
