--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "eslint-config-next": "13.4.4",
     "framer-motion": "^10.12.16",
     "lucide-react": "^0.236.0",
-    "next": "13.4.4",
+    "next": "13.4.8",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-day-picker": "^8.7.1",
@@ -62,6 +62,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@types/uuid": "^9.0.1"
+    "@types/uuid": "^9.0.1",
+    "encoding": "^0.1.13"
   }
 }
