--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "eslint-config-next": "13.4.4",
     "framer-motion": "^10.12.16",
     "lucide-react": "^0.236.0",
-    "next": "13.4.8",
+    "next": "latest",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-day-picker": "^8.7.1",
