--- a/package.json
+++ b/package.json
@@ -9,61 +9,64 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.1.0",
+    "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-context-menu": "^2.1.4",
-    "@radix-ui/react-dialog": "^1.0.4",
-    "@radix-ui/react-dropdown-menu": "^2.0.5",
-    "@radix-ui/react-hover-card": "^1.0.6",
+    "@radix-ui/react-context-menu": "^2.1.5",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-hover-card": "^1.0.7",
     "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-menubar": "^1.0.3",
-    "@radix-ui/react-navigation-menu": "^1.1.3",
-    "@radix-ui/react-popover": "^1.0.6",
+    "@radix-ui/react-menubar": "^1.0.4",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-radio-group": "^1.1.3",
-    "@radix-ui/react-scroll-area": "^1.0.4",
+    "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-toast": "^1.1.4",
-    "@reduxjs/toolkit": "^1.9.5",
-    "@supabase/auth-helpers-nextjs": "^0.7.2",
-    "@supabase/supabase-js": "^2.25.0",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@reduxjs/toolkit": "^1.9.7",
+    "@supabase/auth-helpers-nextjs": "^0.7.4",
+    "@supabase/ssr": "^0.3.0",
+    "@supabase/supabase-js": "^2.42.7",
     "@tailwindcss/container-queries": "^0.1.1",
-    "@tanstack/react-table": "^8.9.1",
+    "@tanstack/react-table": "^8.16.0",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
-    "class-variance-authority": "^0.6.0",
+    "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
-    "cmdk": "^0.2.0",
+    "cmdk": "^0.2.1",
     "date-fns": "^2.30.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
-    "framer-motion": "^10.12.16",
+    "framer-motion": "^10.18.0",
     "lucide-react": "^0.236.0",
     "next": "latest",
+    "next-themes": "^0.3.0",
     "postcss": "8.4.24",
     "react": "18.2.0",
-    "react-day-picker": "^8.7.1",
+    "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.44.3",
-    "react-redux": "^8.1.0",
+    "react-hook-form": "^7.51.3",
+    "react-redux": "^8.1.3",
     "redux-persist": "^6.0.0",
     "resend": "^0.15.3",
     "slugify": "^1.6.6",
-    "tailwind-merge": "^1.13.0",
+    "sonner": "^1.4.41",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.2",
-    "tailwindcss-animate": "^1.0.5",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.1.3",
-    "uuid": "^9.0.0",
+    "uuid": "^9.0.1",
     "uuidv4": "^6.2.13",
-    "zod": "^3.21.4"
+    "zod": "^3.23.4"
   },
   "devDependencies": {
-    "@types/uuid": "^9.0.1",
+    "@types/uuid": "^9.0.8",
     "encoding": "^0.1.13"
   }
 }
