--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
-    "@radix-ui/react-alert-dialog": "1.0.4",
+    "@radix-ui/react-alert-dialog": "1.0.5",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-context-menu": "^2.1.5",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -22,50 +22,50 @@
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-scroll-area": "^1.0.5",
-    "@radix-ui/react-select": "^1.2.2",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
-    "@reduxjs/toolkit": "^1.9.7",
-    "@supabase/auth-helpers-nextjs": "^0.7.4",
+    "@reduxjs/toolkit": "^2.2.3",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.42.7",
     "@tailwindcss/container-queries": "^0.1.1",
     "@tanstack/react-table": "^8.16.0",
-    "@types/node": "20.2.5",
-    "@types/react": "18.2.8",
-    "@types/react-dom": "18.2.4",
-    "autoprefixer": "10.4.14",
-    "class-variance-authority": "^0.6.1",
-    "clsx": "^1.2.1",
-    "cmdk": "^0.2.1",
-    "date-fns": "^2.30.0",
-    "eslint": "8.42.0",
-    "eslint-config-next": "13.4.4",
-    "framer-motion": "^10.18.0",
-    "lucide-react": "^0.236.0",
-    "next": "latest",
+    "autoprefixer": "10.4.19",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
+    "date-fns": "^3.6.0",
+    "eslint": "9.1.1",
+    "eslint-config-next": "14.2.3",
+    "framer-motion": "^11.1.7",
+    "lucide-react": "^0.376.0",
+    "next": "^14.2.3",
     "next-themes": "^0.3.0",
-    "postcss": "8.4.24",
-    "react": "18.2.0",
+    "postcss": "8.4.38",
+    "react": "18.3.1",
     "react-day-picker": "^8.10.1",
-    "react-dom": "18.2.0",
+    "react-dom": "18.3.1",
     "react-hook-form": "^7.51.3",
-    "react-redux": "^8.1.3",
+    "react-redux": "^9.1.1",
     "redux-persist": "^6.0.0",
     "slugify": "^1.6.6",
     "sonner": "^1.4.41",
-    "tailwind-merge": "^1.14.0",
-    "tailwindcss": "3.3.2",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss": "3.4.3",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.1.3",
+    "typescript": "5.4.5",
     "uuid": "^9.0.1",
     "uuidv4": "^6.2.13",
     "zod": "^3.23.4"
   },
   "devDependencies": {
+    "@types/node": "20.12.7",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.0",
     "@types/uuid": "^9.0.8",
     "encoding": "^0.1.13"
   }
