--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-hook-form": "^7.51.3",
     "react-redux": "^9.1.1",
     "redux-persist": "^6.0.0",
+    "resend": "^3.2.0",
     "slugify": "^1.6.6",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
